community-half-ready

--- a/css/global.css
+++ b/css/global.css
@@ -1,241 +1,220 @@
-*,
-*::after,
-*::before{
+/* poppins-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins-v20-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* poppins-500 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/poppins-v20-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* poppins-600 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/poppins-v20-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* inter-500 - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/inter-v12-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* inter-600 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/inter-v12-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* inter-700 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/inter-v12-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  *,
+  *::after,
+  *::before{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-html{
+  }
+  html{
+    height: 100%;
     font-size: 62.5%;
+  }
+  ul{
+    list-style: none;
+  }
+  a{
+    text-decoration: none;
+    display: inline-block;
+    color: #000;
+  }
+  img{
+    display: flex;
+    object-fit: cover;
+  }
+  body{
+    display: flex;
+    flex-direction: column;
     height: 100%;
-}
-body{
-    height: 100%;
+    font-family: 'Poppins' , Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 1.66;
+    color: #5b5b5b;
+  }
+  .header{
+    padding-top: 1.6rem;
+    padding-bottom: 1.6rem;
+  }
+  .container{
     width: 100%;
-    max-width: 192rem ;
+    max-width: 1380px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #FFFFFF;
-}
-ul{
-    list-style: none;
-}
-a{
-    text-decoration: none;
-}
-/* header start */
-.site-nav{
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+  .active{
+    color: #F58A07 !important;
+  }
+  .site-nav{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-}
-.header-logo {
-    width: 12.2rem;
-    height: 2.5rem;
-
-
-}
-.header-list {
+  }
+  .home-page{
+    margin-right: auto;
+  }
+  .header-list{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 3rem ;
-}
-
-.header-link {
- display: inline-block;
- font-size: 1.6rem;
- line-height: 2.4rem;
- color: #000;
-
-}
-.header-btn {
-    padding-top: 1rem;
-    padding-left: 4.3rem;
+    gap: 3.2rem;
+  }
+  .header-btn{
     width: 17.3rem;
     height: 5.2rem;
-    display: inline-block;
-    font-size: 1.6rem;
-    line-height: 2.4rem;
-    border: 1px solid  white;
-    border-radius: 3.1rem ;
-    background-color: #F58A071A;
-    color:  #F58A07 ;
-}
-/* header end */
-
-
-
-
-/* main start */
-
-
-
-/* main end */
-
-
-
-
-
-
-
-
-
-
-/* footer start */
-
-
-.footer{
-    width: 192rem;
-    height: 46.3rem;
-    background-color: #063255;
-    background-image: url('../images/Shape\ Left.png'), url('../images/Shape\ Right.png');
-    background-repeat: no-repeat;
-    background-position: left bottom, right ;
-  
-}
-.footer-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 4rem;
+    padding: 1.8rem , 3.2rem;
+    border-radius: 3.1rem;
+    background-color: rgba(245, 138, 7, 0.1);
+    color: #F58A07;
+  }
+  main{
+    flex-grow: 1;
+  }
+  .footer {
+    background-color:#063255;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    bottom: 0;
     
+  }
+  
+  .footer-wrapper {
+    display: flex;
+    flex-direction: column;
+    background-image: url('../images/Shape\ Left.png') , url('../images/Shape\ Right.png') ;
+    background-repeat: no-repeat;
+    background-position: left bottom , right;
+  }
+  .footer-top {
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    padding-top: 5rem ;
-    padding-bottom: 5rem;
-}
-.footer-top-left {
-   display: flex;
-   flex-direction: column;
-
-}
-.footer-logo {
-    width: 12.2rem;
-    height: 2.5rem; 
-    margin-bottom: 4rem;
-}
-.footer-left-content {
-    font-size: 3.6rem;
+    padding-top: 8.2rem;
+    font: size 1.6rem;
     color: white;
-    letter-spacing: -3%;
-    margin-bottom: 3rem;
-}
-.footer-list {
+  }
+  
+  .footer-logo {
+    padding-bottom: 3.2rem;
+  }
+  .footer-left-content {
+    padding-bottom: 3.2rem;
+  }
+  .footer-list {
     display: flex;
-    gap: 5rem ;
-    
-}
-
-.icons {
-    height: 2rem;
-    width: 2.1rem;
-}
-.footer-top-middle {
-    width: 9.2rem;
-    height: 19.5rem;
-}
-.footer-middle-content {
-    width: 9.2rem;
-    height: 2.7rem;
-    font-size: 1.8rem;
-    line-height: 2.7rem;
+    gap: 1.2rem;
+  }
+  
+  
+  .footer-middle-content {
+    padding-bottom: 2.4rem;
+  }
+  
+  .middle--list-item {
+    padding-bottom: 1.6rem;
+  }
+  .middle-list-links {
     color: white;
-    margin-bottom: 2rem;
-}
-.footer-middle-list {
-    font-size: 1.6rem;
-    line-height: 2.7rem;
-    
-}
-
-
-.middle-list-links {
+  }
+  
+  .footer-top-right-middle-content {
+    padding-bottom: 2.6rem;
+  }
+  
+  .right-middle-link {
     color: white;
-}
-.footer-top-right-middle {
-    width: 14.2rem;
-    height: 19.5rem;
-}
-.footer-top-right-middle-content {
-    width: 14.2rem;
-    height: 2.7rem;
-    font-size: 1.8rem;
-    line-height: 2.7rem;
-    color: white;
-    margin-bottom: 2rem;
-}
-.right-middle-address {
-    width: 14.2rem;
-    height: 2.4rem;
-    font-size: 1.6rem ;
-    line-height: 2.4rem;
-    width: 9.2rem;
-    height: 2.7rem;
-    font-size: 1.8rem;
-    line-height: 2.7rem;
-    
-}
-.right-middle-link {
-    width: 14.2rem;
-    height: 2.7rem;
-    font-size: 1.6rem;
-    line-height: 2.4rem;
-    color: white;
-}
-.footer-top-right {
-    width: 34.2rem;
-    height: 19.2rem;
-    font-size: 1.8rem;
-    line-height: 2.7rem;
-    color: white;
-}
-.footer-top-right-content {
-    margin-bottom: 2rem;
-}
-label{
-    display: block;
-}
-
-.footer-input{
+    padding-bottom: 1.6rem ;
+  }
+  
+  .footer-top-right-content {
+    padding-bottom: 2.4rem;
+  }
+  .form-control {
+    padding-bottom: 1.6rem;
+  }
+  .footer-input {
     width: 34.2rem;
     height: 5.4rem;
     border-radius: 3.1rem;
-    text-align: left;
-    padding-left: 2rem;
-    font-size: 1.6rem ;
-    margin-bottom: 1rem;
-}
-.footer-button{
+    justify-content: center;
+    align-items: left;
+    padding-left: 3.2rem;
+  }
+  .footer-button {
     width: 15.6rem;
     height: 5.4rem;
-    border: 1px solid #F58A07 ;
+    border: 1px solid #F58A07;
     border-radius: 3.1rem;
     background-color: #F58A07;
     color: white;
-    font-size: 1.8rem;
-    line-height: 1.9rem;
-}
-.footer-bootom {
-    width: 180rem;
-    height: 2.4rem;
+
+  }
+  .footer-bootom {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 10rem ;
-    font-size: 1.6rem ;
+    padding-bottom: 8rem;
+    padding-top: 8rem;
+  }
+  .footer-rights {
+    margin-right: auto;
     color: white;
-    
-}
-
-.footer-bottom-list {
+  }
+  .footer-bottom-list {
     display: flex;
-    gap: 3rem;
-    font-size: 1.6rem;
-    
-}
-
-.bottom-link {
+    gap: 3.1rem;
+  }
+  
+  .bottom-link {
     color: white;
-}
-
-
-
-/* footer end  */
+  }
